Added more libraries for the project

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJjWx0IzCsBsASN5relOdf",
+      "authorship_tag": "ABX9TyPu7/pBUiTjKYpe33locmFF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "y9Oq2yv_Qf0A"
       },
@@ -36,7 +36,14 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "\n",
+        "import math\n",
+        "import matplotlib.pyplot as plt\n",
+        "import plotly.express as px\n",
+        "import plotly.graph_objects as go\n",
+        "from plotly.subplots import make_subplots\n",
+        "from plotly.offline import init_notebook_mode, iplot"
       ]
     },
     {
