Added more libraries from scikit learn

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLY+1agun/x8/ewAopIGI5",
+      "authorship_tag": "ABX9TyNAq7hygVS2ofNw00a9rMtr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "y9Oq2yv_Qf0A"
       },
@@ -43,7 +43,10 @@
         "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
         "from plotly.subplots import make_subplots\n",
-        "from plotly.offline import init_notebook_mode, iplot"
+        "from plotly.offline import init_notebook_mode, iplot\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.model_selection import train_test_split"
       ]
     },
     {
