Dropped column Class in the dataframe, variables X0, X1, y0, y1 were defined

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjqn0pGIUriFwinX719ZNC",
+      "authorship_tag": "ABX9TyN/Vz6ssRyp0sY2cA9i7Tz1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1514,9 +1514,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X0, X1 = data0.drop('Class', axis = 1), data0['Class']\n",
+        "y0, y1 = data1.drop('Class', axis = 1), data1['Class']"
+      ],
       "metadata": {
         "id": "WBeBzFcrhQP-"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QbUMKkerh00d"
       },
       "execution_count": null,
       "outputs": []
