added x__va,l, x_test, y_val and y_test values also updates maded

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNET2mCZsN4cM5OUiaJLdSj",
+      "authorship_tag": "ABX9TyNcfW9faEiNTu3SRg/oVi12",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1570,6 +1570,26 @@
         "id": "uJQj8wJAix1i"
       },
       "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_val, X_test, y_val, y_test = train_test_split(X_test, y_test, test_size = 0.5, random_state = 40)"
+      ],
+      "metadata": {
+        "id": "vFaBUXL9VyxA"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CoQN17JdWH2t"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
