validation and testing data updated

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcfW9faEiNTu3SRg/oVi12",
+      "authorship_tag": "ABX9TyNke2JYP9C3QeOXmJZgZbf+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1585,9 +1585,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data_val_1, data_test_1 = pd.concat([X_val, y_val], axis = 1), pd.concat([X_test, y_test], axis = 1)"
+      ],
       "metadata": {
         "id": "CoQN17JdWH2t"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "La7o49wNWiGC"
       },
       "execution_count": null,
       "outputs": []
