updated the split values of fraud

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNke2JYP9C3QeOXmJZgZbf+",
+      "authorship_tag": "ABX9TyOWatW9cBygn0IiYqaVUlro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1596,9 +1596,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Dividing the fraudulent class\n",
+        "X_val, X_test, y_val, y_test = train_test_split(X_1, y_1, test_size = 0.5, random_state = 40)"
+      ],
       "metadata": {
         "id": "La7o49wNWiGC"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aE9mpvyiWu9b"
       },
       "execution_count": null,
       "outputs": []
