--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWatW9cBygn0IiYqaVUlro",
+      "authorship_tag": "ABX9TyNVeUu7xmJHL1AinUdsUd4J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1608,11 +1608,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data_val_2, data_test_2 = pd.concat([X_val, y_val], axis = 1), pd.concat([X_test, y_test], axis = 1)"
+      ],
       "metadata": {
         "id": "aE9mpvyiWu9b"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     }
   ]
