Dropped unnecesary columns

--- a/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
+++ b/ANOMALY_CREDIT_CARD_DETECTOR.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVeUu7xmJHL1AinUdsUd4J",
+      "authorship_tag": "ABX9TyPsXiQeS9jTxWLuEJV9utLW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1615,6 +1615,39 @@
         "id": "aE9mpvyiWu9b"
       },
       "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# construction of the validation set:_\n",
+        "data_val, data_test = pd.concat([data_val_1, data_val_2], axis = 0), pd.concat([data_test_1, data_test_2], axis = 0)"
+      ],
+      "metadata": {
+        "id": "IuVOS29mYBTy"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_val, y_val = data_val.drop('Class', axis = 1), data_val['Class']\n",
+        "X_test, y_test = data_test.drop('Class', axis = 1), data_test['Class']"
+      ],
+      "metadata": {
+        "id": "b7hXSxnqYHk_"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rZvkQzp4YUyE"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
